rules-dsl/backend/java-bridge/src/main/antlr4/com/rules/grammar/RulesParser.py
# Generated from /Users/chandramohn/workspace/rules_engine/ui-prototype/backend/java-bridge/src/main/antlr4/com/rules/grammar/Rules.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RulesParser ( Parser ):

    grammarFileName = "Rules.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'rule'", "'if'", "'then'", "'elseif'", 
                     "'else'", "'endif'", "'return'", "'and'", "'or'", "'not'", 
                     "'in'", "'not_in'", "'is_null'", "'is_not_null'", "'contains'", 
                     "'starts_with'", "'ends_with'", "'matches'", "'null'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'('", 
                     "')'", "'['", "']'", "'.'", "','", "':'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'" ]

    symbolicNames = [ "<INVALID>", "RULE", "IF", "THEN", "ELSEIF", "ELSE", 
                      "ENDIF", "RETURN", "AND", "OR", "NOT", "IN", "NOT_IN", 
                      "IS_NULL", "IS_NOT_NULL", "CONTAINS", "STARTS_WITH", 
                      "ENDS_WITH", "MATCHES", "NULL", "EQ", "NE", "LT", 
                      "LE", "GT", "GE", "LPAREN", "RPAREN", "LBRACKET", 
                      "RBRACKET", "DOT", "COMMA", "COLON", "PLUS", "MINUS", 
                      "MULT", "DIV", "MOD", "BOOLEAN", "NUMBER", "DQUOTED_STRING", 
                      "SQUOTED_STRING", "STRING", "IDENTIFIER", "WS", "LINE_COMMENT" ]

    RULE_ruleSet = 0
    RULE_rule = 1
    RULE_ruleName = 2
    RULE_ruleStep = 3
    RULE_block = 4
    RULE_blockItem = 5
    RULE_actionSequence = 6
    RULE_returnStatement = 7
    RULE_condition = 8
    RULE_orExpression = 9
    RULE_andExpression = 10
    RULE_notExpression = 11
    RULE_primaryExpression = 12
    RULE_comparison = 13
    RULE_expression = 14
    RULE_term = 15
    RULE_factor = 16
    RULE_atom = 17
    RULE_attribute = 18
    RULE_attributeIdentifier = 19
    RULE_functionCall = 20
    RULE_functionArgs = 21
    RULE_operator = 22
    RULE_value = 23
    RULE_list = 24
    RULE_action = 25
    RULE_parameterList = 26
    RULE_parameter = 27

    ruleNames =  [ "ruleSet", "rule", "ruleName", "ruleStep", "block", "blockItem", 
                   "actionSequence", "returnStatement", "condition", "orExpression", 
                   "andExpression", "notExpression", "primaryExpression", 
                   "comparison", "expression", "term", "factor", "atom", 
                   "attribute", "attributeIdentifier", "functionCall", "functionArgs", 
                   "operator", "value", "list", "action", "parameterList", 
                   "parameter" ]

    EOF = Token.EOF
    RULE=1
    IF=2
    THEN=3
    ELSEIF=4
    ELSE=5
    ENDIF=6
    RETURN=7
    AND=8
    OR=9
    NOT=10
    IN=11
    NOT_IN=12
    IS_NULL=13
    IS_NOT_NULL=14
    CONTAINS=15
    STARTS_WITH=16
    ENDS_WITH=17
    MATCHES=18
    NULL=19
    EQ=20
    NE=21
    LT=22
    LE=23
    GT=24
    GE=25
    LPAREN=26
    RPAREN=27
    LBRACKET=28
    RBRACKET=29
    DOT=30
    COMMA=31
    COLON=32
    PLUS=33
    MINUS=34
    MULT=35
    DIV=36
    MOD=37
    BOOLEAN=38
    NUMBER=39
    DQUOTED_STRING=40
    SQUOTED_STRING=41
    STRING=42
    IDENTIFIER=43
    WS=44
    LINE_COMMENT=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RuleSetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(RulesParser.EOF, 0)

        def rule_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.RuleContext)
            else:
                return self.getTypedRuleContext(RulesParser.RuleContext,i)


        def getRuleIndex(self):
            return RulesParser.RULE_ruleSet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleSet" ):
                listener.enterRuleSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleSet" ):
                listener.exitRuleSet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRuleSet" ):
                return visitor.visitRuleSet(self)
            else:
                return visitor.visitChildren(self)




    def ruleSet(self):

        localctx = RulesParser.RuleSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_ruleSet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 56
                self.rule_()
                self.state = 59 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 61
            self.match(RulesParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RULE(self):
            return self.getToken(RulesParser.RULE, 0)

        def ruleName(self):
            return self.getTypedRuleContext(RulesParser.RuleNameContext,0)


        def COLON(self):
            return self.getToken(RulesParser.COLON, 0)

        def blockItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.BlockItemContext)
            else:
                return self.getTypedRuleContext(RulesParser.BlockItemContext,i)


        def getRuleIndex(self):
            return RulesParser.RULE_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule" ):
                listener.enterRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule" ):
                listener.exitRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule" ):
                return visitor.visitRule(self)
            else:
                return visitor.visitChildren(self)




    def rule_(self):

        localctx = RulesParser.RuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(RulesParser.RULE)
            self.state = 64
            self.ruleName()
            self.state = 65
            self.match(RulesParser.COLON)
            self.state = 67 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 66
                self.blockItem()
                self.state = 69 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 9895604650116) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DQUOTED_STRING(self):
            return self.getToken(RulesParser.DQUOTED_STRING, 0)

        def SQUOTED_STRING(self):
            return self.getToken(RulesParser.SQUOTED_STRING, 0)

        def IDENTIFIER(self):
            return self.getToken(RulesParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return RulesParser.RULE_ruleName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleName" ):
                listener.enterRuleName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleName" ):
                listener.exitRuleName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRuleName" ):
                return visitor.visitRuleName(self)
            else:
                return visitor.visitChildren(self)




    def ruleName(self):

        localctx = RulesParser.RuleNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ruleName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 12094627905536) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleStepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(RulesParser.IF, 0)

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.ConditionContext)
            else:
                return self.getTypedRuleContext(RulesParser.ConditionContext,i)


        def THEN(self, i:int=None):
            if i is None:
                return self.getTokens(RulesParser.THEN)
            else:
                return self.getToken(RulesParser.THEN, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.BlockContext)
            else:
                return self.getTypedRuleContext(RulesParser.BlockContext,i)


        def ENDIF(self):
            return self.getToken(RulesParser.ENDIF, 0)

        def ELSEIF(self, i:int=None):
            if i is None:
                return self.getTokens(RulesParser.ELSEIF)
            else:
                return self.getToken(RulesParser.ELSEIF, i)

        def ELSE(self):
            return self.getToken(RulesParser.ELSE, 0)

        def getRuleIndex(self):
            return RulesParser.RULE_ruleStep

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleStep" ):
                listener.enterRuleStep(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleStep" ):
                listener.exitRuleStep(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRuleStep" ):
                return visitor.visitRuleStep(self)
            else:
                return visitor.visitChildren(self)




    def ruleStep(self):

        localctx = RulesParser.RuleStepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ruleStep)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(RulesParser.IF)
            self.state = 74
            self.condition()
            self.state = 75
            self.match(RulesParser.THEN)
            self.state = 76
            self.block()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 77
                self.match(RulesParser.ELSEIF)
                self.state = 78
                self.condition()
                self.state = 79
                self.match(RulesParser.THEN)
                self.state = 80
                self.block()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 87
                self.match(RulesParser.ELSE)
                self.state = 88
                self.block()


            self.state = 91
            self.match(RulesParser.ENDIF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.BlockItemContext)
            else:
                return self.getTypedRuleContext(RulesParser.BlockItemContext,i)


        def getRuleIndex(self):
            return RulesParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = RulesParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 93
                self.blockItem()
                self.state = 96 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 9895604650116) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ruleStep(self):
            return self.getTypedRuleContext(RulesParser.RuleStepContext,0)


        def actionSequence(self):
            return self.getTypedRuleContext(RulesParser.ActionSequenceContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(RulesParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return RulesParser.RULE_blockItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockItem" ):
                listener.enterBlockItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockItem" ):
                listener.exitBlockItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockItem" ):
                return visitor.visitBlockItem(self)
            else:
                return visitor.visitChildren(self)




    def blockItem(self):

        localctx = RulesParser.BlockItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_blockItem)
        try:
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.ruleStep()
                pass
            elif token in [40, 43]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.actionSequence()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.returnStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionSequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.ActionContext)
            else:
                return self.getTypedRuleContext(RulesParser.ActionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(RulesParser.COMMA)
            else:
                return self.getToken(RulesParser.COMMA, i)

        def getRuleIndex(self):
            return RulesParser.RULE_actionSequence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActionSequence" ):
                listener.enterActionSequence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActionSequence" ):
                listener.exitActionSequence(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActionSequence" ):
                return visitor.visitActionSequence(self)
            else:
                return visitor.visitChildren(self)




    def actionSequence(self):

        localctx = RulesParser.ActionSequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_actionSequence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.action()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31:
                self.state = 104
                self.match(RulesParser.COMMA)
                self.state = 105
                self.action()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(RulesParser.RETURN, 0)

        def getRuleIndex(self):
            return RulesParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = RulesParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(RulesParser.RETURN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpression(self):
            return self.getTypedRuleContext(RulesParser.OrExpressionContext,0)


        def getRuleIndex(self):
            return RulesParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = RulesParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.orExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.AndExpressionContext)
            else:
                return self.getTypedRuleContext(RulesParser.AndExpressionContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(RulesParser.OR)
            else:
                return self.getToken(RulesParser.OR, i)

        def getRuleIndex(self):
            return RulesParser.RULE_orExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpression" ):
                listener.enterOrExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpression" ):
                listener.exitOrExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpression" ):
                return visitor.visitOrExpression(self)
            else:
                return visitor.visitChildren(self)




    def orExpression(self):

        localctx = RulesParser.OrExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_orExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.andExpression()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 116
                self.match(RulesParser.OR)
                self.state = 117
                self.andExpression()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AndExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def notExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.NotExpressionContext)
            else:
                return self.getTypedRuleContext(RulesParser.NotExpressionContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(RulesParser.AND)
            else:
                return self.getToken(RulesParser.AND, i)

        def getRuleIndex(self):
            return RulesParser.RULE_andExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpression" ):
                listener.enterAndExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpression" ):
                listener.exitAndExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpression" ):
                return visitor.visitAndExpression(self)
            else:
                return visitor.visitChildren(self)




    def andExpression(self):

        localctx = RulesParser.AndExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_andExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.notExpression()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 124
                self.match(RulesParser.AND)
                self.state = 125
                self.notExpression()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NotExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self):
            return self.getTypedRuleContext(RulesParser.PrimaryExpressionContext,0)


        def NOT(self):
            return self.getToken(RulesParser.NOT, 0)

        def getRuleIndex(self):
            return RulesParser.RULE_notExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpression" ):
                listener.enterNotExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExpression" ):
                listener.exitNotExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotExpression" ):
                return visitor.visitNotExpression(self)
            else:
                return visitor.visitChildren(self)




    def notExpression(self):

        localctx = RulesParser.NotExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_notExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 131
                self.match(RulesParser.NOT)


            self.state = 134
            self.primaryExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparison(self):
            return self.getTypedRuleContext(RulesParser.ComparisonContext,0)


        def LPAREN(self):
            return self.getToken(RulesParser.LPAREN, 0)

        def orExpression(self):
            return self.getTypedRuleContext(RulesParser.OrExpressionContext,0)


        def RPAREN(self):
            return self.getToken(RulesParser.RPAREN, 0)

        def getRuleIndex(self):
            return RulesParser.RULE_primaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryExpression" ):
                listener.enterPrimaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryExpression" ):
                listener.exitPrimaryExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpression" ):
                return visitor.visitPrimaryExpression(self)
            else:
                return visitor.visitChildren(self)




    def primaryExpression(self):

        localctx = RulesParser.PrimaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_primaryExpression)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.comparison()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(RulesParser.LPAREN)
                self.state = 138
                self.orExpression()
                self.state = 139
                self.match(RulesParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(RulesParser.ExpressionContext,i)


        def operator(self):
            return self.getTypedRuleContext(RulesParser.OperatorContext,0)


        def getRuleIndex(self):
            return RulesParser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison" ):
                return visitor.visitComparison(self)
            else:
                return visitor.visitChildren(self)




    def comparison(self):

        localctx = RulesParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_comparison)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.expression()
            self.state = 144
            self.operator()
            self.state = 145
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.TermContext)
            else:
                return self.getTypedRuleContext(RulesParser.TermContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(RulesParser.PLUS)
            else:
                return self.getToken(RulesParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(RulesParser.MINUS)
            else:
                return self.getToken(RulesParser.MINUS, i)

        def getRuleIndex(self):
            return RulesParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):
